--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 
+<%= @user %>
 <%= @user.profile.first_name %> <%= @user.profile.last_name %><br/>
 <%= @user.profile.job_title %><br/>
 <% if current_user.plan_id == 2 %>
